--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
@@ -17,13 +18,14 @@
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
-    "typescript": "3.2.2"
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "tsc serve.ts && ./node_modules/.bin/nodemon serve.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,8 +37,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
     "@types/react-redux": "^6.0.11",
     "@types/reactstrap": "^6.4.3",
-    "@types/redux-form": "^7.4.13"
+    "@types/redux-form": "^7.4.13",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "nodemon": "^1.18.9",
+    "ts-node": "^7.0.1"
   }
 }
